--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@polkadot/api": "^10.5.1",
     "@polkadot/extension-dapp": "^0.46.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@mui/x-date-pickers": "^6.0.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "dayjs": "^1.11.7",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
